--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primary">#87FFA9</color>
+    <color name="primary">#51FF82</color>
     <color name="accent">#FF7223</color>
-    <color name="textIcon">#FFDCFB</color>
+    <color name="textIcon">#FF32E8</color>
     <color name="textPrimary">#1E1F22</color>
     <color name="ratingActive">#FF5100</color>
     <color name="ratingInactive">#F4F4F4</color>
