--- a/app/src/main/res/layout/item_container_poster.xml
+++ b/app/src/main/res/layout/item_container_poster.xml
@@ -21,7 +21,7 @@
         android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="@id/viewSupporter"
         app:layout_constraintTop_toTopOf="@id/textName"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.4"
         tools:layout_editor_absoluteX="0dp" />
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -92,7 +92,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="20dp"
-        android:src=""
+        android:src="@drawable/ic_check_mark"
         app:layout_constraintBottom_toTopOf="@id/viewBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/viewBackground"
