--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
 
     <color name="primary">#51FF82</color>
     <color name="accent">#FF7223</color>
-    <color name="textIcon">#FF32E8</color>
+    <color name="textIcon">#FFA7F5</color>
     <color name="textPrimary">#1E1F22</color>
     <color name="ratingActive">#FF5100</color>
     <color name="ratingInactive">#F4F4F4</color>
